--- a/templates/drake.toml
+++ b/templates/drake.toml
@@ -4,15 +4,19 @@ image="./drake.png"
 
 [[features]]
 kind="Either"
-x=465
-y=10
-w=420
-h=330
+x=448
+y=0
+w=444
+h=351
+margin_left=10
+margin_top=10
 font_size=40
 [[features]]
 kind="Either"
-x=465
-y=360
-w=420
-h=330
+x=448
+y=350
+w=444
+h=351
+margin_left=10
+margin_top=10
 font_size=40
